--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
     "bootstrap": "^5.3.8",
+    "firebase": "^12.9.0",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
